fix(HTML): scroll overflowing children

--- a/src/styles/semantic/definitions/lodgify-ui-components/html.less
+++ b/src/styles/semantic/definitions/lodgify-ui-components/html.less
@@ -13,6 +13,7 @@
 -----------------------*/
 
 .html-container {
+  overflow-x: scroll;
 
   > img {
     max-width: @htmlContainerImmediateImageChildMaxWidth;
